--- a/package.json
+++ b/package.json
@@ -6,42 +6,48 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "gqlcode:gen": "graphql-codegen"
+    "gql:codegen": "graphql-codegen"
   },
   "dependencies": {
     "@apollo/client": "^3.6.4",
     "@chakra-ui/icons": "^2.0.0",
-    "@chakra-ui/react": "^2.0.0",
+    "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typed-document-node": "^2.2.11",
     "@graphql-codegen/typescript": "^2.4.11",
     "@graphql-codegen/typescript-operations": "^2.4.0",
-    "@unocss/reset": "^0.33.5",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@unocss/reset": "^0.34.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6.3.3",
     "graphql": "^16.5.0",
     "history": "^5.3.0",
+    "immer": "^9.0.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "6.3.0",
-    "vite-plugin-fs": "1.0.0-beta.3"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/utils": "^0.5.2",
-    "@types/node": "^17.0.34",
+    "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.24.0",
-    "@typescript-eslint/parser": "^5.24.0",
+    "@types/react-redux": "^7.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.15.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "type-fest": "^2.12.2",
     "typescript": "^4.6.4",
-    "unocss": "^0.33.5",
+    "unocss": "^0.34.0",
     "vite": "^2.9.9"
   }
 }
