--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "graphql": "^16.5.0",
     "history": "^5.3.0",
     "immer": "^9.0.14",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "6.3.0",
     "redux": "^4.2.0",
@@ -34,6 +36,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
