--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@graphql-codegen/typescript-operations": "^2.4.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@unocss/reset": "^0.34.0",
+    "dayjs": "^1.11.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.3",
     "graphql": "^16.5.0",
