--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,7 +12,9 @@
     }
   },
   "include": [
-    "src",
-    "vite.config.ts"
-  ]
+    "./src"
+  ],
+  "exclude": [
+    "./node_modules"
+  ],
 }
