--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "composite": true,
     "useDefineForClassFields": true,
     "lib": [
       "DOM",
@@ -26,7 +27,10 @@
     }
   },
   "include": [
-    "src"
+    "./src"
+  ],
+  "exclude": [
+    "./node_modules"
   ],
   "references": [
     {
