--- a/package.json
+++ b/package.json
@@ -4,35 +4,35 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc --pretty --skipLibCheck && vite build",
     "preview": "vite preview",
     "gql:codegen": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.4",
-    "@chakra-ui/icons": "^2.0.0",
-    "@chakra-ui/react": "^2.0.2",
+    "@apollo/client": "^3.6.6",
+    "@chakra-ui/icons": "^2.0.1",
+    "@chakra-ui/react": "^2.1.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typed-document-node": "^2.2.11",
     "@graphql-codegen/typescript": "^2.4.11",
     "@graphql-codegen/typescript-operations": "^2.4.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@unocss/reset": "^0.34.0",
-    "ahooks": "^3.4.0",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@unocss/reset": "^0.37.2",
+    "ahooks": "^3.4.1",
     "chakra-react-select": "^4.0.0",
     "dayjs": "^1.11.2",
     "formik": "^2.2.9",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "^6.3.6",
     "graphql": "^16.5.0",
     "history": "^5.3.0",
     "immer": "^9.0.14",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
-    "react-redux": "^8.0.1",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6.3.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
@@ -40,20 +40,20 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
+    "@types/node": "^17.0.38",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-react": "^1.3.2",
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
-    "type-fest": "^2.12.2",
-    "typescript": "^4.6.4",
-    "unocss": "^0.34.0",
+    "type-fest": "^2.13.0",
+    "typescript": "^4.7.2",
+    "unocss": "^0.37.2",
     "vite": "^2.9.9"
   }
 }
