--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.10",
