--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "type-fest": "^2.13.0",
     "typescript": "^4.7.2",
     "unocss": "^0.37.2",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-remove-console": "^1.0.4"
   }
 }
